@@ -1,3 +1,4 @@
+* Add support of domain for non-relation field
 * Manage microseconds in JSON-RPC and XML-RPC
 * Remove Sha field
 * Add password widget
